--- a/dev/Jenkinsfile
+++ b/dev/Jenkinsfile
@@ -1,6 +1,6 @@
 String awxCredentials = "05fecac6-c0d8-4692-a0fb-ce4c3823f0b7"
 String AWS_DEFAULT_REGION = "us-east-1"
-String bran = "develop"
+String bran = "dev"
 def getGitBranchName() {
     return scm.branches[0].name
 }
@@ -80,66 +80,66 @@ def echo_all(list, bn) {
         
         t = sh(script: "if [ -d \"${item}\" ];then echo 1; else echo 0; fi", returnStdout: true).trim()
     
-        if ("${t}" == "1") {
-            dir("${item}") {
-                template_id = sh(script: "cat values."+bn+".tfvars | grep awx_template_id | awk -F' = ' '{print \$2}'", returnStdout: true).trim()
-                echo "TEMPLATE_ID: , ${template_id}"
+    //     if ("${t}" == "1") {
+    //         dir("${item}") {
+    //             template_id = sh(script: "cat values."+bn+".tfvars | grep awx_template_id | awk -F' = ' '{print \$2}'", returnStdout: true).trim()
+    //             echo "TEMPLATE_ID: , ${template_id}"
                 
-                    stage('Terraform Init'){
-                        sh 'rm -rf .terraform'
-                        sh 'terraform init -upgrade'
-                    }
-                    stage('Terraform workspace select'){
-                          try {
-                               sh 'terraform workspace new ' + bn
-                         } catch (err) {
-                              sh 'terraform workspace select ' + bn
-                          }
-                    }
+    //                 stage('Terraform Init'){
+    //                     sh 'rm -rf .terraform'
+    //                     sh 'terraform init -upgrade'
+    //                 }
+    //                 stage('Terraform workspace select'){
+    //                       try {
+    //                            sh 'terraform workspace new ' + bn
+    //                      } catch (err) {
+    //                           sh 'terraform workspace select ' + bn
+    //                       }
+    //                 }
                 
-                    stage('Terraform Destroy') {
-                        if (params.REQUESTED_ACTION == 'destroy') {
-                            sh "set +x; terraform destroy -var 'domain_user=${domain_user}' -var 'domain_pwd=${domain_pwd}' -var 'awx_user=${awx_user}' -var 'awx_pwd=${awx_pwd}' -var 'ansible_win_user=${ansible_win_user}' -var 'ansible_win_pwd=${ansible_win_pwd}' -var-file=values.${bn}.tfvars -no-color --auto-approve"
-                        }
-                    }
-                    stage('Terraform Plan'){
-                        if (params.REQUESTED_ACTION != 'destroy') {
-                            sh "set +x; terraform plan -var 'domain_user=${domain_user}' -var 'domain_pwd=${domain_pwd}' -var 'awx_user=${awx_user}' -var 'awx_pwd=${awx_pwd}' -var 'ansible_win_user=${ansible_win_user}' -var 'ansible_win_pwd=${ansible_win_pwd}' -var-file=values.${bn}.tfvars -no-color -out myplan"  
-                        }
-                    }
+    //                 stage('Terraform Destroy') {
+    //                     if (params.REQUESTED_ACTION == 'destroy') {
+    //                         sh "set +x; terraform destroy -var 'domain_user=${domain_user}' -var 'domain_pwd=${domain_pwd}' -var 'awx_user=${awx_user}' -var 'awx_pwd=${awx_pwd}' -var 'ansible_win_user=${ansible_win_user}' -var 'ansible_win_pwd=${ansible_win_pwd}' -var-file=values.${bn}.tfvars -no-color --auto-approve"
+    //                     }
+    //                 }
+    //                 stage('Terraform Plan'){
+    //                     if (params.REQUESTED_ACTION != 'destroy') {
+    //                         sh "set +x; terraform plan -var 'domain_user=${domain_user}' -var 'domain_pwd=${domain_pwd}' -var 'awx_user=${awx_user}' -var 'awx_pwd=${awx_pwd}' -var 'ansible_win_user=${ansible_win_user}' -var 'ansible_win_pwd=${ansible_win_pwd}' -var-file=values.${bn}.tfvars -no-color -out myplan"  
+    //                     }
+    //                 }
                 
-                    // SOLO PARA EL PIPELINE DE PRODUCCION //////////
-                    stage('Terraform Approval') {
-                        if (getGitBranchName() == 'master') {
-                            script {
-                                def userInput = input(id: 'confirm', message: 'Apply Terraform?', parameters: [ [$class: 'BooleanParameterDefinition', defaultValue: false, description: 'Apply terraform', name: 'confirm'] ])
-                            }
-                        }
-                    }
-                // SOLO PARA EL PIPELINE DE PRODUCCION //////////
-                    stage('Terraform Apply'){
-                        if (params.REQUESTED_ACTION != 'destroy') {
-                        sh "terraform apply -no-color -input=false myplan"
-                        }
-                    }
+    //                 // SOLO PARA EL PIPELINE DE PRODUCCION //////////
+    //                 stage('Terraform Approval') {
+    //                     if (getGitBranchName() == 'master') {
+    //                         script {
+    //                             def userInput = input(id: 'confirm', message: 'Apply Terraform?', parameters: [ [$class: 'BooleanParameterDefinition', defaultValue: false, description: 'Apply terraform', name: 'confirm'] ])
+    //                         }
+    //                     }
+    //                 }
+    //             // SOLO PARA EL PIPELINE DE PRODUCCION //////////
+    //                 stage('Terraform Apply'){
+    //                     if (params.REQUESTED_ACTION != 'destroy') {
+    //                     sh "terraform apply -no-color -input=false myplan"
+    //                     }
+    //                 }
                     
-                    //time
-                    // stage ("wait_prior_starting_smoke_testing") {
-                    // echo 'Waiting 1 minute for deployment to complete prior starting smoke testing'
-                    // sleep 60 // seconds
-                    // } 
-                    // stage('Hardening') {
-                    //     timeout(time: 2, unit: 'HOURS') {
-                    //         build job: 'IAC-HARDENING-AWS', parameters: [
-                    //         string(name: 'SERVICE', value: "${item}"),
-                    //         string(name: 'TEMPLATE_ID', value: "${template_id}"),
-                    //         string(name: 'BRANCH', value: "${getGitBranchName()}")
-                    //         ]
-                    //     }
-                    // } 
-                }
-     }  else {
-            echo "Dir not found"
-        }
-    }
+    //                 //time
+    //                 // stage ("wait_prior_starting_smoke_testing") {
+    //                 // echo 'Waiting 1 minute for deployment to complete prior starting smoke testing'
+    //                 // sleep 60 // seconds
+    //                 // } 
+    //                 // stage('Hardening') {
+    //                 //     timeout(time: 2, unit: 'HOURS') {
+    //                 //         build job: 'IAC-HARDENING-AWS', parameters: [
+    //                 //         string(name: 'SERVICE', value: "${item}"),
+    //                 //         string(name: 'TEMPLATE_ID', value: "${template_id}"),
+    //                 //         string(name: 'BRANCH', value: "${getGitBranchName()}")
+    //                 //         ]
+    //                 //     }
+    //                 // } 
+    //             }
+    //  }  else {
+    //         echo "Dir not found"
+    //     }
+    // }
 }
