--- a/dev/Jenkinsfile
+++ b/dev/Jenkinsfile
@@ -78,7 +78,7 @@ node {
 } //END NODE
 def echo_all(list, bn) {
     list.each { item ->
-        echo "directorio ${item}
+        echo "directorio ${item}"
         t = sh(script: "if [ -d \"${item}\" ];then echo 1; else echo 0; fi", returnStdout: true).trim()
         echo "directorio ${t}"  
         if ("${t}" == "1") {
