--- a/dev/Jenkinsfile
+++ b/dev/Jenkinsfile
@@ -68,7 +68,7 @@ node {
    
     stage('Get services'){
         forlders = sh(script: "git log -1 --name-only --oneline | tail -n +2 | awk -F'/' '{print \$2}' | sort | uniq", returnStdout: true).trim().split('\n')
-        echo "directorio ${folders}"
+        echo "directorio ${forlders}"
         echo_all(forlders, bran)
     }
 
