--- a/dev/Jenkinsfile
+++ b/dev/Jenkinsfile
@@ -79,9 +79,10 @@ node {
 def echo_all(list, bn) {
     list.each { item ->
         echo "directorio ${item}"
-        t = sh(script: "if [ -d \"${item}\" ];then echo 1; else echo 0; fi", returnStdout: true).trim()
+        t = sh(script: "if [[ $(find ${item} -type f  | wc -l) -gt 0 ]]; then echo 1; else echo 0; fi", returnStdout: true).trim()
+       // t = sh(script: "if [ -d \"${item}\" ];then echo 1; else echo 0; fi", returnStdout: true).trim()
         echo "directorio ${t}"  
-        if ("${t}" == "0") {
+        if ("${t}" == "1") {
             dir("${item}") {
                 template_id = sh(script: "cat values.develop.tfvars | grep awx_template_id | awk -F' = ' '{print \$2}'", returnStdout: true).trim()
                 echo "TEMPLATE_ID: , ${template_id}"
