--- a/dev/Jenkinsfile
+++ b/dev/Jenkinsfile
@@ -205,12 +205,12 @@ node {
         checkout scm
         echo "Cloning files from branch =  ${getGitBranchName()}"
     } 
-    stage ('Plugins Provider AWX'){
-        sh 'rm -rf ~/.terraform.d/'
-        sh 'chmod 777 terraform-provider-awx'
-        sh 'mkdir -p ~/.terraform.d/plugins/terraform.arcos/local/awx/0.2.3/linux_amd64'
-        sh 'cp -r terraform-provider-awx  ~/.terraform.d/plugins/terraform.arcos/local/awx/0.2.3/linux_amd64/'     
-    }    
+    // stage ('Plugins Provider AWX'){
+    //     sh 'rm -rf ~/.terraform.d/'
+    //     sh 'chmod 777 terraform-provider-awx'
+    //     sh 'mkdir -p ~/.terraform.d/plugins/terraform.arcos/local/awx/0.2.3/linux_amd64'
+    //     sh 'cp -r terraform-provider-awx  ~/.terraform.d/plugins/terraform.arcos/local/awx/0.2.3/linux_amd64/'     
+    // }    
    
     stage('Get services'){
         forlders = sh(script: "git log -1 --name-only --oneline | tail -n +2 | awk -F'/' '{print \$2}' | sort | uniq", returnStdout: true).trim().split('\n')
